plugins {
    id 'application'
    id 'java-library'
    id 'maven-publish'
    id 'org.javamodularity.moduleplugin' version '1.8.9'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id "org.beryx.jlink" version "3.1.0-rc-1"
    id 'com.gradleup.shadow' version '8.3.5'
}

repositories {
    mavenCentral()
}

group = 'io.lok1s'
version = '1.1-release'
description = 'nahod'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

dependencies {
    /* JavaFX */
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-controls:21'
    /* AppleFX for JavaFX */
    implementation 'eu.hansolo:applefx:latest.release'
    implementation 'eu.hansolo:jdktools:latest.release'
    /* Apache Commons */
    implementation 'commons-io:commons-io:2.14.0'
    /* Log4j */
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-iostreams:2.20.0'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

task javadoc(type: Javadoc) {
    source = sourceSets.main.allJava
    destinationDir = file("${buildDir}/docs/javadoc")
}

javafx {
    version = 21
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'io.lok1s.nahod.MainLauncher'
    mainModule = 'io.lok1s.nahod'
}

jar {
    manifest {
        attributes  'Main-Class': 'io.lok1s.nahod.MainLauncher',
                'Module-Name': 'io.lok1s.nahod'
    }
}

jlink {
    options = [
            '--strip-debug',
            '--compress', '1',
            '--no-header-files',
            '--no-man-pages',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
    launcher {
        name = 'nahod'
    }

    forceMerge('log4j-api')

    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            imageOptions += ['--win-console']
        }
        if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
            installerOptions += ['--mac-package-identifier', 'io.lok1s.nahod']
            imageOptions += ['--mac-package-name', 'nahod']
        }
        if (org.gradle.internal.os.OperatingSystem.current().linux) {
            installerOptions += ['--linux-package-name', 'nahod']
            imageOptions += ['--linux-package-name', 'nahod']
        }
    }

    shadowJar {
        archiveBaseName = 'nahod'
        archiveVersion = '1.1-release'
        manifest {
            attributes(
                    'Main-Class': 'io.lok1s.nahod.MainLauncher',
                    'Module-Name': 'io.lok1s.nahod'
            )
        }
    }


}

